--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lalezar&display=swap"
       rel="stylesheet"
     />
+    <script src="https://sad.adsgram.ai/js/sad.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
